[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 80.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 192.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 320.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 192.0

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 576.0
margin_top = 128.0
margin_right = 704.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="."]
margin_left = 104.0
margin_top = 80.0
margin_right = 254.0
margin_bottom = 94.0
rect_scale = Vector2( 3.84304, 4.23529 )
text = "A               B              C  "

[node name="Label4" type="Label" parent="."]
margin_left = 76.0
margin_top = 244.0
margin_right = 115.0
margin_bottom = 258.0
rect_scale = Vector2( 2.64926, 4.04904 )
text = "x1"

[node name="Label5" type="Label" parent="."]
margin_left = 77.0
margin_top = 297.0
margin_right = 116.0
margin_bottom = 311.0
rect_scale = Vector2( 2.24186, 3.88415 )
text = "x2"

[node name="Button" type="Button" parent="."]
margin_left = 256.0
margin_top = 384.0
margin_right = 576.0
margin_bottom = 443.0
text = "Calcular Equação do Segundo Grau"

[node name="Label6" type="Label" parent="."]
margin_left = 621.0
margin_top = 297.0
margin_right = 934.0
margin_bottom = 367.0
rect_scale = Vector2( 1.24719, 3.44444 )

[node name="Button2" type="Button" parent="."]
margin_left = 925.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 40.0
text = "Briot Ruffini"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
